# Bubble-T

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
.sentrux/: baseline.json  rules.toml
crates/ansi/: Cargo.toml
crates/ansi/src/: background.rs  c0.rs  c1.rs  clipboard.rs  color.rs  ctrl.rs  cursor.rs  cwd.rs  finalterm.rs  focus.rs  hyperlink.rs  lib.rs  mode.rs  mouse.rs  notification.rs  palette.rs  passthrough.rs  paste.rs  progress.rs  query.rs  screen.rs  seq.rs  sgr.rs  status.rs  style.rs  title.rs  truncate.rs  urxvt.rs  width.rs  winop.rs  wrap.rs  xterm.rs
crates/ansi/src/graphics/: mod.rs
crates/ansi/src/graphics/kitty/: decoder.rs  encoder.rs  mod.rs  options.rs  protocol.rs  shm.rs  writer.rs
crates/ansi/src/kitty/: decode.rs  mod.rs
crates/ansi/src/parse/: decode.rs  handler.rs  mod.rs  parser.rs  seq.rs
crates/ansi/src/sixel/: color.rs  decoder.rs  encoder.rs  mod.rs  palette.rs  palette_default.rs  raster.rs  repeat.rs
crates/bubble-t/: Cargo.toml
crates/bubble-t-widgets/: Cargo.toml  README.md
crates/bubble-t-widgets/src/: clipboard.rs  cursor.rs  filepicker.rs  help.rs  key.rs  lib.rs  paginator.rs  progress.rs  runeutil.rs  spinner.rs  stopwatch.rs  table.rs  timer.rs  viewport.rs
crates/bubble-t-widgets/src/list/: api.rs  defaultitem.rs  filtering.rs  keys.rs  mod.rs  model.rs  rendering.rs  style.rs  types.rs
crates/bubble-t-widgets/src/textarea/: helpers.rs  mod.rs  tests.rs
crates/bubble-t-widgets/src/textinput/: keymap.rs  methods.rs  mod.rs  model.rs  suggestions.rs  tests.rs  types.rs
crates/bubble-t/src/: command.rs  error.rs  event.rs  gradient.rs  input.rs  key.rs  lib.rs  logging.rs  memory.rs  model.rs  program.rs  query_parser.rs  renderer.rs  signals.rs  terminal.rs  view.rs  view_runtime.rs
crates/bubble-t/tests/: keyboard_enhancements.rs
crates/cellbuf/: Cargo.toml
crates/cellbuf/src/: buffer.rs  cell.rs  diff.rs  error.rs  geom.rs  graphics.rs  hardscroll.rs  lib.rs  link.rs  render.rs  screen.rs  style.rs  tabstop.rs  util.rs  wrap.rs  writer.rs
crates/colorprofile/: Cargo.toml
crates/colorprofile/src/: env.rs  env_other.rs  env_windows.rs  lib.rs  terminfo.rs  tmux.rs  writer.rs
crates/harmonica/: Cargo.toml
crates/lipgloss/: Cargo.toml  LICENSE
crates/lipgloss-extras/: Cargo.toml  README.md
crates/lipgloss-extras/src/: lib.rs
crates/lipgloss-list/: Cargo.toml  README.md
crates/lipgloss-table/: Cargo.toml  README.md
crates/lipgloss-table/src/: lib.rs  util.rs
crates/lipgloss-tree/: Cargo.toml  README.md
crates/lipgloss-tree/src/: lib.rs  renderer.rs
crates/lipgloss-tree/tests/: basic_tests.rs  golden_tests.rs
crates/term/: Cargo.toml
crates/term/src/: lib.rs
crates/term/src/sys/: unix.rs  windows.rs
docs/: API-BUBBLES-RS.md  API-BUBBLETEA-RS.md  API-LIPGLOSS.md  V2-PARITY-MATRIX.md
examples/: README.md
examples/altscreen-toggle/: Cargo.toml  README.md  main.rs
examples/autocomplete/: Cargo.toml  README.md  main.rs
examples/capability/: Cargo.toml  main.rs
examples/cellbuffer/: Cargo.toml  README.md  debug_main.rs  main.rs
examples/chat/: Cargo.toml  README.md  main.rs
examples/composable-views/: Cargo.toml  main.rs
examples/credit-card-form/: Cargo.toml  README.md  main.rs
examples/cursor-color/: Cargo.toml  main.rs
examples/debounce/: Cargo.toml  README.md  main.rs
examples/exec/: Cargo.toml  README.md  main.rs
examples/file-picker/: Cargo.toml  README.md  main.rs
examples/focus-blur/: Cargo.toml  README.md  main.rs
examples/fullscreen/: Cargo.toml  README.md  main.rs
examples/glamour/: Cargo.toml  README.md  main.rs
examples/help/: Cargo.toml  README.md  main.rs
examples/http/: Cargo.toml  README.md  main.rs
examples/keyboard-enhancements/: Cargo.toml  main.rs
examples/list-default/: Cargo.toml  README.md  main.rs
examples/list-fancy/: Cargo.toml  README.md  main.rs  test_list_pagination.rs  test_paginator.rs
examples/list-simple/: Cargo.toml  README.md  main.rs  test_dots.rs
examples/mouse/: Cargo.toml  main.rs
examples/package-manager/: Cargo.toml  README.md  main.rs
examples/pager/: Cargo.toml  README.md  main.rs
examples/paginator/: Cargo.toml  README.md  main.rs
examples/pipe/: Cargo.toml  README.md  main.rs
examples/prevent-quit/: Cargo.toml  README.md  main.rs
examples/progress-animated/: Cargo.toml  README.md  main.rs
examples/progress-download/: Cargo.toml  README.md  main.rs
examples/progress-static/: Cargo.toml  README.md  main.rs
examples/realtime/: Cargo.toml  README.md  main.rs
examples/result/: Cargo.toml  README.md  main.rs
examples/send-msg/: Cargo.toml  README.md  main.rs
examples/sequence/: Cargo.toml  README.md  main.rs
examples/set-window-title/: Cargo.toml  README.md  main.rs
examples/simple/: Cargo.toml  README.md  main.rs
examples/spinner/: Cargo.toml  README.md  main.rs
examples/spinners/: Cargo.toml  README.md  main.rs
examples/split-editors/: Cargo.toml  README.md  main.rs
examples/stopwatch/: Cargo.toml  README.md  main.rs
examples/suspend/: Cargo.toml  README.md  main.rs
examples/table/: Cargo.toml  main.rs
examples/table-resize/: Cargo.toml  README.md  main.rs
examples/tabs/: Cargo.toml  README.md  main.rs
examples/terminal-image/: Cargo.toml  main.rs
examples/textarea/: Cargo.toml  README.md  main.rs
examples/textinput/: Cargo.toml  README.md  main.rs
examples/textinputs/: Cargo.toml  README.md  main.rs
examples/timer/: Cargo.toml  README.md  main.rs
examples/timer-advanced/: Cargo.toml  README.md  main.rs
examples/tui-daemon-combo/: Cargo.toml  README.md  main.rs
examples/views/: Cargo.toml  main.rs
examples/window-size/: Cargo.toml  README.md  (+1 more)
scripts/: fix_examples_v2.py  fix_view_new_parens.py  fix_widget_doctests.py  fix_widget_doctests_v2.py  install-git-hooks.ps1  install-git-hooks.sh  rust-checks.sh
tests/: batch_streaming.rs  command_tests.rs  custom_input_tests.rs  env_tests.rs  error_tests.rs  event_tests.rs  input_handler_tests.rs  input_tests.rs
(+47 files in other folders)
