[workspace]
resolver = "2"
members = [
    "crates/bubble-t",
    "crates/lipgloss",
    "crates/lipgloss-list",
    "crates/lipgloss-table",
    "crates/lipgloss-tree",
    "crates/lipgloss-extras",
    "crates/bubble-t-widgets",
    "examples/altscreen-toggle",
    "examples/autocomplete",
    "examples/cellbuffer",
    "examples/chat",
    "examples/composable-views",
    "examples/credit-card-form",
    "examples/debounce",
    "examples/exec",
    "examples/file-picker",
    "examples/focus-blur",
    "examples/fullscreen",
    "examples/glamour",
    "examples/help",
    "examples/http",
    "examples/list-default",
    "examples/list-fancy",
    "examples/list-simple",
    "examples/mouse",
    "examples/package-manager",
    "examples/pager",
    "examples/paginator",
    "examples/pipe",
    "examples/prevent-quit",
    "examples/progress-animated",
    "examples/progress-download",
    "examples/progress-static",
    "examples/realtime",
    "examples/result",
    "examples/send-msg",
    "examples/sequence",
    "examples/set-window-title",
    "examples/simple",
    "examples/spinner",
    "examples/spinners",
    "examples/split-editors",
    "examples/stopwatch",
    "examples/suspend",
    "examples/table",
    "examples/table-resize",
    "examples/tabs",
    "examples/textarea",
    "examples/textinput",
    "examples/textinputs",
    "examples/timer",
    "examples/timer-advanced",
    "examples/tui-daemon-combo",
    "examples/views",
    "examples/window-size",
]

[workspace.package]
version = "0.1.12"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
repository = "https://github.com/Nexlab-One/Bubble-T"
homepage = "https://github.com/Nexlab-One/Bubble-T"
authors = ["Nexlab-One", "whit3rabbit <whiterabbit@protonmail.com>"]
keywords = ["tui", "cli", "terminal", "style", "layout"]
categories = ["command-line-interface", "text-processing"]

[workspace.dependencies]
# Internal crates
bubble-t = { path = "./crates/bubble-t", version = "0.1.12" }
bubble-t-widgets = { path = "./crates/bubble-t-widgets", version = "0.1.12" }
lipgloss = { path = "./crates/lipgloss", version = "0.1.12" }
lipgloss-list = { path = "./crates/lipgloss-list", version = "0.1.12" }
lipgloss-table = { path = "./crates/lipgloss-table", version = "0.1.12" }
lipgloss-tree = { path = "./crates/lipgloss-tree", version = "0.1.12" }
lipgloss-extras = { path = "./crates/lipgloss-extras", version = "0.1.12" }

# External dependencies
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
log = "0.4.33"
futures = "0.3.32"
tokio-util = "0.7.18"
pin-project = "1.1.13"
parking_lot = "0.12.5"
async-trait = "0.1.89"
unicode-width = "0.2.2"
palette = "0.7.6"
strip-ansi-escapes = "0.2.1"
fuzzy-matcher = "0.3.7"
arboard = "3.6.1"
once_cell = "1.21.4"
unicode-segmentation = "1.13.3"
libc = "0.2.186"
criterion = "0.8.2"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "rustls", "stream"], default-features = false }
http = "1.4.2"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
