[package]
name = "ansi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ANSI/VT escape-sequence builders and a byte-stream parser. Rust port of charmbracelet/x/ansi."

[dependencies]
base64 = "0.22.1"
flate2 = "1.1.5"
getrandom = "0.3.4"
image = { version = "0.25.9", default-features = false, features = ["png"] }
memmap2 = "0.9.10"
tempfile = "3.25.0"
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
] }

[dev-dependencies]
