[package]
name = "cellbuf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Width-aware styled cell grid and screen diffing. Rust port of charmbracelet/x/cellbuf."

[dependencies]
ansi = { workspace = true }
image = { version = "0.25.9", default-features = false }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
