[package]
name = "colorprofile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal color-profile detection and ANSI downsampling. Rust port of charmbracelet/colorprofile."

[dependencies]
ansi = { workspace = true }
terminfo = "0.9.0"
