[package]
name = "autocomplete-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "autocomplete"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
