[package]
name = "credit-card-form-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "credit-card-form"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }