[package]
name = "help-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "help"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
unicode-width = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }