[package]
name = "keyboard-enhancements-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "keyboard-enhancements"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
tokio = { workspace = true }
