[package]
name = "list-default-example"
version.workspace = true
edition.workspace = true
default-run = "list-default"

[[bin]]
name = "list-default"
path = "main.rs"

# Removed debug binaries that don't exist anymore

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }
strip-ansi-escapes = { workspace = true }