[package]
name = "list-fancy-example"
version.workspace = true
edition.workspace = true
default-run = "list-fancy"

[[bin]]
name = "list-fancy"
path = "main.rs"

[[bin]]
name = "test-paginator"
path = "test_paginator.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }