[package]
name = "list-simple-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "list-simple"
path = "main.rs"

[[bin]]
name = "test-dots"
path = "test_dots.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }