[package]
name = "paginator-example"
version.workspace = true
edition.workspace = true
default-run = "paginator"

[[bin]]
name = "paginator"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }