[package]
name = "pipe-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "pipe"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
tokio = { workspace = true }
libc = { workspace = true }
