[package]
name = "progress-download"
version.workspace = true
edition.workspace = true

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
