[package]
name = "progress-static-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "progress-static"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }