[package]
name = "realtime-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "realtime"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
bubble-t-widgets = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }