[package]
name = "send-msg-example"
version.workspace = true
edition.workspace = true

[[bin]]
name = "send-msg"
path = "main.rs"

[dependencies]
bubble-t = { workspace = true }
lipgloss-extras = { workspace = true, features = ["full"] }
crossterm = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }